# pybox2d

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  conanfile.py  conanfile.txt  project.conf  setup.py
Box2D/: Box2D.i  Box2D_debugdraw.i  Box2D_particle.i  Box2D_rope.i  Box2D_shapes.i  Box2D_wrap.cpp  Box2D_wrap.h
Box2D/Collision/: b2DynamicTree.cpp
Box2D/Collision/Shapes/: b2ChainShape.cpp
Box2D/Common/: b2Draw.h  b2Settings.h
Box2D/Dynamics/: b2World.cpp  b2World.h
Box2D/Particle/: b2ParticleSystem.cpp  b2ParticleSystem.h
examples/: framework.py  impulse.py  multiple_particle_system.py  settings.py  soup.py  wave_machine.py
examples/backends/: pygame_framework.py
scripts/: build-android.bat  build-headers.bat  build-ios.sh  build-macos.sh  build-pc.bat  build.bat
